--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>My First Page</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1><strong></strong>Hello World</strong></h1>
+    
+    <h2><em>Goodbye!</em></h2>
   </body>
 </html>
