--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li>Cannot Field</li>
         <li>Cannot Run</li>
         <li>Cannot Throw</li>
+        <li>Fastball travels at the speed of smell</li>
+        <li>Curveball bounces before homeplate</li>
         <li><em>Lacks all needed baseball skills</em></li>
     </ul>
     
