--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    
    <h4>Favorite Links of Luke</h4> 
   <ol>
-      <li><a href="http://espn.go.com/" <ESPN></a></li>
+      <li><a href="http://espn.go.com/">ESPN</a></li>
   </ol>
    
     
