--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
    <h4>Favorite Links of Luke</h4> 
   <ol>
       <li><a href="http://espn.go.com/">ESPN</a></li>
-      <li><a href="https://katie.luther.edu/moodle/login/index.php>KATIE</a></li>
-      <li><a href="http://www.luther.edu/"Luther College</a></li>
+      <li><a href="https://katie.luther.edu/moodle/login/index.php">KATIE</a></li>
+      <li><a href="http://www.luther.edu/">Luther College</a></li>
   </ol>
    
     
