--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h6><em>Four Year Varsity Letter Winner</em></h6>
     
      <img src="https://www.luther.edu/reason/images/356772.jpg" height="200px"></img> <br>
+     <img src="https://farm8.staticflickr.com/7301/12237208754_0ef6152cbf_s.jpg" width="75" height="75" alt="0776"></a>
     
     <h4><b>Current Class Schedule</b></h4>
     <ul>
