--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>My First Page</title>
     <style>
       {
-        background-color:rgb(176,176,176);
+        background-color:#B0B0B0;
       }
       .bluetext {color:blue;
       }
