--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ body {
 }
   .bluetext {color:blue;
   }
+  .whitetext {color:white;
+  }
+  .greentext {color:green;
+  }
 </style>
   </head>
   <body>
@@ -22,7 +26,7 @@ body {
      <img src="https://www.luther.edu/reason/images/356772.jpg" height="200px"></img> <br>
      <img src="https://farm8.staticflickr.com/7301/12237208754_0ef6152cbf_s.jpg" height="100px"></a>
     
-    <h4><b>Current Class Schedule</b></h4>
+    <h4 class="greentext"><b>Current Class Schedule</b></h4>
     <ul>
         <li>Math 110</li>
         <li>Management 365</li>
@@ -33,9 +37,9 @@ body {
    
    <h4>Favorite Links of Luke</h4> 
   <ol>
-      <li><a href="http://espn.go.com/">ESPN</a></li>
-      <li><a href="https://katie.luther.edu/moodle/login/index.php">KATIE</a></li>
-      <li><a href="http://www.luther.edu/">Luther College</a></li>
+      <li class="whitetext"><a href="http://espn.go.com/">ESPN</a></li>
+      <li class="whitetext"><a href="https://katie.luther.edu/moodle/login/index.php">KATIE</a></li>
+      <li class="whitetext"><a href="http://www.luther.edu/">Luther College</a></li>
   </ol>
   
   <p>Currently in the job market to find a job in Health Care Administration. Ultimately I plan to be the Administrator of a CCRC nursing facility somewhere in the Upper Midwest. I personally would like to coach a basketball or football team at the high school level because I do not think I want to coach at the college level. Luther College has allowed me to explore into areas I would not have otherwise thought of and I am thankful for the opportunities I have had at Luther College!</p>
@@ -49,8 +53,8 @@ body {
         <dd>Legally able to save a person in water up to 100 ft</dd>
   </dl>
     
-    <h3><em>Be more concerned with your character than your reputation, 
-    because your character is what you really are, 
+    <h3><em>Be more concerned with your character than your reputation, <br>
+    because your character is what you really are, <br>
     while your reputation is merely what other people think you are - John Wooden</em></h3>
   </body>
 </html>
