--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@ body {
    
    <h4>Favorite Links of Luke</h4> 
   <ol>
-      <li class="whitetext"><a href="http://espn.go.com/">ESPN</a></li>
-      <li class="whitetext"><a href="https://katie.luther.edu/moodle/login/index.php">KATIE</a></li>
-      <li class="whitetext"><a href="http://www.luther.edu/">Luther College</a></li>
+      <li><a href="http://espn.go.com/">ESPN</a></li>
+      <li><a href="https://katie.luther.edu/moodle/login/index.php">KATIE</a></li>
+      <li><a href="http://www.luther.edu/">Luther College</a></li>
   </ol>
   
-  <p>Currently in the job market to find a job in Health Care Administration. Ultimately I plan to be the Administrator of a CCRC nursing facility somewhere in the Upper Midwest. I personally would like to coach a basketball or football team at the high school level because I do not think I want to coach at the college level. Luther College has allowed me to explore into areas I would not have otherwise thought of and I am thankful for the opportunities I have had at Luther College!</p>
+  <blockquote class="whitetext">Currently in the job market to find a job in Health Care Administration. Ultimately I plan to be the Administrator of a CCRC nursing facility somewhere in the Upper Midwest. I personally would like to coach a basketball or football team at the high school level because I do not think I want to coach at the college level. Luther College has allowed me to explore into areas I would not have otherwise thought of and I am thankful for the opportunities I have had at Luther College!</p>
    
   <h2>Current Certifications</h2>
   
