--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
       <li><a href="http://www.luther.edu/">Luther College</a></li>
   </ol>
   
-  <blockquote class="whitetext">Currently in the job market to find a job in Health Care Administration. Ultimately I plan to be the Administrator of a CCRC nursing facility somewhere in the Upper Midwest. I personally would like to coach a basketball or football team at the high school level because I do not think I want to coach at the college level. Luther College has allowed me to explore into areas I would not have otherwise thought of and I am thankful for the opportunities I have had at Luther College!</p>
+  <blockquote>Currently in the job market to find a job in Health Care Administration. Ultimately I plan to be the Administrator of a CCRC nursing facility somewhere in the Upper Midwest. I personally would like to coach a basketball or football team at the high school level because I do not think I want to coach at the college level. Luther College has allowed me to explore into areas I would not have otherwise thought of and I am thankful for the opportunities I have had at Luther College!</blockquote>
    
   <h2>Current Certifications</h2>
   
