--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ body {
   <p>Currently in the job market to find a job in Health Care Administration.<br> 
   Ultimately I plan to be the Administrator of a CCRC nursing facility somewhere in the Upper Midwest.<br>
   I personally would like to coach a basketball or football team at the high school level because I do not think I want to coach at the college level. <br>
+  I am a big fan of warm, tropical places and my background is a great example of the ideal day for me.<br>
   Luther College has allowed me to explore into areas I would not have otherwise thought of and I am thankful for the opportunities I have had at Luther College!</p>
    
   <h2>Current Certifications</h2>
@@ -53,7 +54,7 @@ body {
       <dt>CPR Certified</dt>
         <dd>Life Saving Skill</dd>
       <dt>Lifeguard Certified</dt>
-        <dd>Legally able to save a person in water up to 100 ft</dd>
+        <dd>Legally able to save a person in water up to 100 ft deep</dd>
   </dl>
     
     <h3><em>Be more concerned with your character than your reputation, <br>
