--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@ body {
   }
   .greentext {color:green;
   }
+  .limetext {color:lime;
+  }
 </style>
   </head>
   <body>
     <h1 class="bluetext"><strong>The Life of Luke Wright</strong></h1>
+    
+    <h1 class="limetext" 20pt>My Homework Assignments</h1>
     
     <h2><i>Business Management Major</i></h2>
     <h3><i>May 2015</i></h3>
