--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@ body {
   <body>
     <h1 class="bluetext"><strong>The Life of Luke Wright</strong></h1>
     
-    <ul class="limetext">My Homework Assignments
-        <li><a href="http://espn.go.com/">ESPN</a></li>
-    </ul>
+    <h1 class="limetext">My Homework Assignments</h1>
+        <ul>
+          <li><a href="http://espn.go.com/">ESPN</a></li>
+        </ul>
     
     <h2><i>Business Management Major</i></h2>
     <h3><i>May 2015</i></h3>
