--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
     
     <h1 class="limetext">My Homework Assignments</h1>
         <ul>
-          <li><a href="http://espn.go.com/">ESPN</a></li>
+          <li><a href="https://github.com/wriglu01/wriglu01.github.io/blob/master/Daily%20Schedule">ESPN</a></li>
         </ul>
     
     <h2><i>Business Management Major</i></h2>
