--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -29,27 +29,18 @@ body {
       </tr>
       <tr>
         <td>7:15 AM</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
+        <td column span=3>Breakfast</td>
+        <td column span=3>Breakfast</td>
+        <td column span=3>Breakfast</td>
+        <td column span=3>Breakfast</td>
+        <td column span=3>Breakfast</td>
      </tr>
      <tr>
         <td>7:30 AM</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-     </tr>
+         </tr>
      <tr>
         <td>7:45 AM</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
-        <td>Breakfast</td>
+        
      </tr>
      <tr>
         <td>8:00 AM</td>
