--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -29,11 +29,11 @@ body {
       </tr>
       <tr>
         <td>7:15 AM</td>
-        <td columnspan=3>Breakfast</td>
-        <td columnspan=3>Breakfast</td>
-        <td columnspan=3>Breakfast</td>
-        <td columnspan=3>Breakfast</td>
-        <td columnspan=3>Breakfast</td>
+        <td rowspan=3>Breakfast</td>
+        <td rowspan=3>Breakfast</td>
+        <td rowspan=3>Breakfast</td>
+        <td rowspan=3>Breakfast</td>
+        <td rowspan=3>Breakfast</td>
      </tr>
      <tr>
         <td>7:30 AM</td>
