--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -21,20 +21,12 @@ body {
       </tr>
       <tr>
         <td>7:00 AM</td>
-        <td>Shower</td>
-        <td>Shower</td>
-        <td>Shower</td>
-        <td>Shower</td>
-        <td>Shower</td>
+        <td columnspan=5>Shower</td>
       </tr>
       <tr>
         <td>7:15 AM</td>
-        <td rowspan=3>Breakfast</td>
-        <td rowspan=3>Breakfast</td>
-        <td rowspan=3>Breakfast</td>
-        <td rowspan=3>Breakfast</td>
-        <td rowspan=3>Breakfast</td>
-     </tr>
+        <td rowspan=3, columnspan=5>Breakfast</td>
+      </tr>
      <tr>
         <td>7:30 AM</td>
          </tr>
