--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -21,11 +21,11 @@ body {
       </tr>
       <tr>
         <td>7:00 AM</td>
-        <td columnspan=5>Shower</td>
+        <td colspan=5>Shower</td>
       </tr>
       <tr>
         <td>7:15 AM</td>
-        <td rowspan=3, columnspan=5>Breakfast</td>
+        <td rowspan=3, colspan=5>Breakfast</td>
       </tr>
      <tr>
         <td>7:30 AM</td>
