--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -10,7 +10,12 @@ body {
             border-width:4px;
             border-color:black;
           }
-    td    {
+    th{
+            border-style:solid;
+            border-color:blue;
+            border-width:2px;
+    }
+    td{
             border-stlye:solid;
             border-width:2px;
             border-color:blue;
