--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -14,12 +14,12 @@ body {
             border-style:solid;
             border-color:blue;
             border-width:2px;
-    }
-    td{
-            border-stlye:solid;
-            border-width:2px;
-            border-color:blue;
           }
+    .breakcolor {
+           background-color:green;
+           border-color:green;
+    }
+    
   </style>
   </head>
   <body>
@@ -65,9 +65,9 @@ body {
      </tr>
      <tr>
         <td>9:00 AM</td>
-        <td>Break</td>
-        <td>Break</td>
-        <td>Break</td>
+        <td class="breakcolor">Break</td>
+        <td class="breakcolor">Break</td>
+        <td class="breakcolor">Break</td>
      </tr>
      <tr>
         <td>9:15 AM</td>
