--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -19,6 +19,22 @@ body {
            background-color:green;
            border-color:green;
     }
+    .math110 {
+           background-color:red;
+           border-color:red;
+    }
+    .mgt365{
+           background-color:blue;
+           border-color:blue;
+    }
+    .cs130{
+           background-color:orange;
+           border-color:orange;
+    }
+    .pe101{
+           background-color:purple;
+           border-color:purple;
+    }
     
   </style>
   </head>
@@ -51,11 +67,11 @@ body {
      </tr>
      <tr>
         <td>8:00 AM</td>
-        <td rowspan=3>Math 110</td>
+        <td rowspan=3, class="math110">Math 110</td>
         <td rowspan=15>Homework</td>
-        <td rowspan=3>Math 110</td>
+        <td rowspan=3, class="math110">Math 110</td>
         <td rowspan=15>Homework</td>
-        <td rowspan=3>Math 110</td>
+        <td rowspan=3, class="math110">Math 110</td>
      </tr>
      <tr>
         <td>8:15 AM</td>
