--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -87,9 +87,9 @@ body {
      </tr>
      <tr>
         <td>9:15 AM</td>
-        <td rowspan=4>MGT 365</td>
-        <td rowspan=4>MGT 365</td>
-        <td rowspan=4>MGT 365</td>
+        <td rowspan=4,class="mgt365">MGT 365</td>
+        <td rowspan=4,class="mgt365">MGT 365</td>
+        <td rowspan=4,class="mgt365">MGT 365</td>
     </tr>
      <tr>
         <td>9:30 AM</td>
@@ -102,9 +102,9 @@ body {
      </tr>
      <tr>
         <td>10:15 AM</td>
-        <td rowspan=3>Break</td>
-        <td rowspan=3>Break</td>
-        <td rowspan=3>Break</td>
+        <td rowspan=3,class="breakcolor">Break</td>
+        <td rowspan=3,class="breakcolor">Break</td>
+        <td rowspan=3,class="breakcolor">Break</td>
      </tr>
      <tr>
         <td>10:30 AM</td>
@@ -114,9 +114,9 @@ body {
      </tr>
      <tr>
         <td>11:00 AM</td>
-        <td rowspan=4>CS 130</td>
-        <td rowspan=4>CS 130</td>
-        <td rowspan=4>CS 130</td>
+        <td rowspan=4,class="cs130">CS 130</td>
+        <td rowspan=4,class="cs130">CS 130</td>
+        <td rowspan=4,class="cs130">CS 130</td>
      </tr>
      <tr>
         <td>11:15 AM</td>
