--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -35,7 +35,10 @@ body {
            background-color:purple;
            border-color:purple;
     }
-    
+    .homework{
+           background-color:aqua;
+           border-color:aqua;
+    }
   </style>
   </head>
   <body>
@@ -68,9 +71,9 @@ body {
      <tr>
         <td>8:00 AM</td>
         <td rowspan=3, class="math110">Math 110</td>
-        <td rowspan=15>Homework</td>
+        <td rowspan=15, class="homework">Homework</td>
         <td rowspan=3, class="math110">Math 110</td>
-        <td rowspan=15>Homework</td>
+        <td rowspan=15, class="homework">Homework</td>
         <td rowspan=3, class="math110">Math 110</td>
      </tr>
      <tr>
