--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -39,6 +39,9 @@ body {
            background-color:aqua;
            border-color:aqua;
     }
+    .food{
+          background-image:url("http://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Smiley.svg/2000px-Smiley.svg.png");
+    }
   </style>
   </head>
   <body>
@@ -59,7 +62,7 @@ body {
       </tr>
       <tr>
         <td>7:15 AM</td>
-        <td rowspan=3, columnspan=5>Breakfast</td>
+        <td rowspan=3, columnspan=5, class="food">Breakfast</td>
       </tr>
      <tr>
         <td>7:30 AM</td>
@@ -132,11 +135,11 @@ body {
      </tr>
      <tr>
         <td>12:00 PM</td>
-        <td rowspan=3>Lunch</td>
-        <td rowspan=3>Lunch</td>
-        <td rowspan=3>Lunch</td>
-        <td rowspan=3>Lunch</td>
-        <td rowspan=3>Lunch</td>
+        <td rowspan=3, class="food">Lunch</td>
+        <td rowspan=3, class="food">Lunch</td>
+        <td rowspan=3, class="food">Lunch</td>
+        <td rowspan=3, class="food">Lunch</td>
+        <td rowspan=3, class="food">Lunch</td>
      </tr>
      <tr>
         <td>12:15 PM</td>
