--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -40,7 +40,8 @@ body {
            border-color:aqua;
     }
     .food{
-          background-image:url("http://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Smiley.svg/2000px-Smiley.svg.png");
+          background-color:#FF1493;
+          border-color:#FF1493;
     }
   </style>
   </head>
