--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -247,11 +247,11 @@ body {
      </tr>
      <tr>
         <td>7:15 PM</td>
-        <td rowspan=3>Dinner</td>
-        <td rowspan=3>Dinner</td>
-        <td rowspan=3>Dinner</td>
-        <td rowspan=3>Dinner</td>
-        <td rowspan=3>Dinner</td>
+        <td rowspan=3, class="food">Dinner</td>
+        <td rowspan=3, class="food">Dinner</td>
+        <td rowspan=3, class="food">Dinner</td>
+        <td rowspan=3, class="food">Dinner</td>
+        <td rowspan=3, class="food">Dinner</td>
      </tr>
      <tr>
         <td>7:30 PM</td>
