--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -165,9 +165,9 @@ body {
      <tr>
         <td>1:30 PM</td>
         <td rowspan=4>PE 101</td>
-        <td rowspan=10>Break</td>
+        <td rowspan=10, class="breakcolor">Break</td>
         <td rowspan=4>PE 101</td>
-        <td rowspan=10>Break</td>
+        <td rowspan=10, class="breakcolor">Break</td>
         <td rowspan=4>PE 101</td>
      </tr>
      <tr>
@@ -181,9 +181,9 @@ body {
      </tr>
      <tr>
         <td>2:30 PM</td>
-        <td rowspan=6>Break</td>
-        <td rowspan=6>Break</td>
-        <td rowspan=6>Break</td>
+        <td rowspan=6, class="breakcolor">Break</td>
+        <td rowspan=6, class="breakcolor">Break</td>
+        <td rowspan=6, class="breakcolor">Break</td>
      </tr>
      <tr>
         <td>2:45 PM</td>
