--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -43,6 +43,11 @@ body {
           background-color:#FF1493;
           border-color:#FF1493;
     }
+    .pe101{
+          background-color:black;
+          border-color:black;
+          text:white;
+    }
   </style>
   </head>
   <body>
@@ -164,11 +169,11 @@ body {
      </tr>
      <tr>
         <td>1:30 PM</td>
-        <td rowspan=4>PE 101</td>
+        <td rowspan=4, class="pe101">PE 101</td>
         <td rowspan=10, class="breakcolor">Break</td>
-        <td rowspan=4>PE 101</td>
+        <td rowspan=4, class="pe101">PE 101</td>
         <td rowspan=10, class="breakcolor">Break</td>
-        <td rowspan=4>PE 101</td>
+        <td rowspan=4, class="pe101">PE 101</td>
      </tr>
      <tr>
         <td>1:45 PM</td>
