--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -48,6 +48,14 @@ body {
           border-color:black;
           text:white;
     }
+    .shower{
+          background-color:white;
+          border-color:white;
+    }
+    .practice{
+         background-color:#20B2AA;
+         border-color:#20B2AA;
+    }
   </style>
   </head>
   <body>
@@ -64,7 +72,7 @@ body {
       </tr>
       <tr>
         <td>7:00 AM</td>
-        <td columnspan=5>Shower</td>
+        <td columnspan=5, class="shower">Shower</td>
       </tr>
       <tr>
         <td>7:15 AM</td>
@@ -208,11 +216,11 @@ body {
      </tr>
      <tr>
         <td>4:00 PM</td>
-        <td rowspan=13>Practice</td>
-        <td rowspan=13>Practice</td>
-        <td rowspan=13>Practice</td>
-        <td rowspan=13>Practice</td>
-        <td rowspan=13>Practice</td>
+        <td rowspan=13, class="practice">Practice</td>
+        <td rowspan=13, class="practice">Practice</td>
+        <td rowspan=13, class="practice">Practice</td>
+        <td rowspan=13, class="practice">Practice</td>
+        <td rowspan=13, class="practice">Practice</td>
      </tr>
      <tr>
         <td>4:15 PM</td>
