--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -43,10 +43,12 @@ body {
           background-color:#FF1493;
           border-color:#FF1493;
     }
-    .pe101{
+    .nap{
           background-color:black;
           border-color:black;
-          text:white;
+    }
+    .white{
+          color:white;
     }
     .shower{
           background-color:white;
@@ -163,11 +165,11 @@ body {
      </tr>
      <tr>
         <td>12:45 PM</td>
-        <td rowspan=3>Nap</td>
-        <td rowspan=3>Nap</td>
-        <td rowspan=3>Nap</td>
-        <td rowspan=3>Nap</td>
-        <td rowspan=3>Nap</td>
+        <td rowspan=3, class="nap", class="white">Nap</td>
+        <td rowspan=3, class="nap", class="white">Nap</td>
+        <td rowspan=3, class="nap", class="white">Nap</td>
+        <td rowspan=3, class="nap", class="white">Nap</td>
+        <td rowspan=3, class="nap", class="white">Nap</td>
      </tr>
      <tr>
         <td>1:00 PM</td>
