--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -44,13 +44,10 @@ body {
           border-color:#FF1493;
     }
     .nap{
-          background-color:black;
-          border-color:black;
+          background-color:#7B68EE;
+          border-color:#7B68EE;
     }
-    .white{
-          color:white;
-    }
-    .shower{
+   .shower{
           background-color:white;
           border-color:white;
     }
