--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -75,7 +75,7 @@ body {
       </tr>
       <tr>
         <td>7:15 AM</td>
-        <td rowspan=3, columnspan=5, class="food">Breakfast</td>
+        <td rowspan=3, columnspan="5", class="food">Breakfast</td>
       </tr>
      <tr>
         <td>7:30 AM</td>
