--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -71,11 +71,11 @@ body {
       </tr>
       <tr>
         <td>7:00 AM</td>
-        <td columnspan=5, class="shower">Shower</td>
+        <td colspan="100%", class="shower">Shower</td>
       </tr>
       <tr>
         <td>7:15 AM</td>
-        <td rowspan=3, columnspan="5", class="food">Breakfast</td>
+        <td rowspan=3, colspan="100%", class="food">Breakfast</td>
       </tr>
      <tr>
         <td>7:30 AM</td>
