--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -9,6 +9,7 @@ body {
             border-style:solid;
             border-width:4px;
             border-color:black;
+            text-align:center;
           }
     th, td{
             border-style:solid;
@@ -259,7 +260,7 @@ body {
      </tr>
      <tr>
         <td>7:15 PM</td>
-        <td rowspan=3, class="food">Dinner</td>
+        <td rowspan=3, colspan="100%", class="food">Dinner</td>
         <td rowspan=3, class="food">Dinner</td>
         <td rowspan=3, class="food">Dinner</td>
         <td rowspan=3, class="food">Dinner</td>
