--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -216,11 +216,7 @@ body {
      </tr>
      <tr>
         <td>4:00 PM</td>
-        <td rowspan=13, class="practice">Practice</td>
-        <td rowspan=13, class="practice">Practice</td>
-        <td rowspan=13, class="practice">Practice</td>
-        <td rowspan=13, class="practice">Practice</td>
-        <td rowspan=13, class="practice">Practice</td>
+        <td rowspan=13, colspan="100%", class="practice">Practice</td>
      </tr>
      <tr>
         <td>4:15 PM</td>
