--- a/DailySchedule.html
+++ b/DailySchedule.html
@@ -149,11 +149,7 @@ body {
      </tr>
      <tr>
         <td>12:00 PM</td>
-        <td rowspan=3, class="food">Lunch</td>
-        <td rowspan=3, class="food">Lunch</td>
-        <td rowspan=3, class="food">Lunch</td>
-        <td rowspan=3, class="food">Lunch</td>
-        <td rowspan=3, class="food">Lunch</td>
+        <td rowspan=3, colspan="100%", class="food">Lunch</td>
      </tr>
      <tr>
         <td>12:15 PM</td>
@@ -163,11 +159,7 @@ body {
      </tr>
      <tr>
         <td>12:45 PM</td>
-        <td rowspan=3, class="nap", class="white">Nap</td>
-        <td rowspan=3, class="nap", class="white">Nap</td>
-        <td rowspan=3, class="nap", class="white">Nap</td>
-        <td rowspan=3, class="nap", class="white">Nap</td>
-        <td rowspan=3, class="nap", class="white">Nap</td>
+        <td rowspan=3, colspan="100%", class="nap", class="white">Nap</td>
      </tr>
      <tr>
         <td>1:00 PM</td>
