--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
   }
   .limetext {color:lime;
   }
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </style>
   </head>
   <body>
