--- a/Floating Text.html
+++ b/Floating Text.html
@@ -1,1 +1,32 @@
 <html>
+   <head>
+   <title>Positioning Assignment</title>
+      <style>
+          main {
+              position: relative;
+          }
+          section {
+              height: 200px;
+              width:200px;
+          }
+          section#a {
+              position: absolute;
+              top: 10px;
+              left: 50px;
+          }
+          section#b {
+              position: absolute;
+              top: 30px;
+              left: 80px;
+          }
+      </style>
+   </head>
+<body>
+<h1>Hello Luther College</h1>
+<main>
+   <section id="a" class="section">Luther</section>
+   <section id="b" class="section">College</section>
+
+</main>
+</body>
+</html>
