--- a/Floating Text.html
+++ b/Floating Text.html
@@ -8,16 +8,23 @@
           section {
               height: 200px;
               width:200px;
+              background-color:gray;
+              border:blue;
+              border-width:3px;
           }
           section#a {
               position: absolute;
               top: 10px;
               left: 50px;
+              border-color:green;
+              border-width:2px;
           }
           section#b {
               position: absolute;
               top: 30px;
               left: 80px;
+              border-color:green;
+              border-width:2px;
           }
       </style>
    </head>
