--- a/Floating Text.html
+++ b/Floating Text.html
@@ -12,14 +12,14 @@
               border:blue;
               border-width:3px;
           }
-          section#a {
+          aside#a {
               position: absolute;
               top: 10px;
               left: 50px;
               border-color:green;
               border-width:2px;
           }
-          section#b {
+          aside#b {
               position: absolute;
               top: 30px;
               left: 80px;
@@ -31,8 +31,8 @@
 <body>
 <h1>Hello Luther College</h1>
 <main>
-   <section id="a" class="section">Luther</section>
-   <section id="b" class="section">College</section>
+   <aside id="a" class="section">Luther</section>
+   <aside id="b" class="section">College</section>
 
 </main>
 </body>
