--- a/Floating Text.html
+++ b/Floating Text.html
@@ -31,6 +31,7 @@
 <body>
 <h1>Hello Luther College</h1>
 <main>
+   <section></section>
    <aside id="a" class="section">Luther</section>
    <aside id="b" class="section">College</section>
 
