--- a/Floating Text.html
+++ b/Floating Text.html
@@ -6,8 +6,8 @@
               position: relative;
           }
           section {
-              height: 200px;
-              width:200px;
+              height: 600px;
+              width:600px;
               background-color:gray;
               border:blue;
               border-width:3px;
@@ -26,15 +26,23 @@
               border-color:green;
               border-width:2px;
           }
+          aside#c {
+              position: absolute;
+              top: 60px;
+              left: 110px;
+              border-color:green;
+              border-width:2px;
+          }
       </style>
    </head>
 <body>
 <h1>Hello Luther College</h1>
 <main>
    <section></section>
-   <aside id="a" class="section">Luther</section>
-   <aside id="b" class="section">College</section>
-
-</main>
+   <aside id="a">Luther</aside>
+   <aside id="b">College</aside>
+   <aside id="c">Norse</aside>
+      
+   </main>
 </body>
 </html>
