--- a/Floating Text.html
+++ b/Floating Text.html
@@ -12,21 +12,21 @@
               border:blue;
               border-width:3px;
           }
-          aside#a {
+          section#a {
               position: absolute;
               top: 10px;
               left: 50px;
               border-color:green;
               border-width:2px;
           }
-          aside#b {
+          section#b {
               position: absolute;
               top: 30px;
               left: 80px;
               border-color:green;
               border-width:2px;
           }
-          aside#c {
+          section#c {
               position: absolute;
               top: 60px;
               left: 110px;
@@ -39,11 +39,10 @@
 <h1>Hello Luther College</h1>
 <main>
    <section></section>
-   <aside id="a">Luther</aside>
-   <aside id="b">College</aside>
-   <aside id="c">Norse</aside>
-   <h1>TEST</h1>
-      
+   <section id="a">Luther</section>
+   <section id="b">College</section>
+   <section id="c">Norse</section>
+ 
    </main>
 </body>
 </html>
