--- a/Floating Text.html
+++ b/Floating Text.html
@@ -12,26 +12,29 @@
               border:blue;
               border-width:3px;
           }
-          section#a {
+          #a {
               position: absolute;
               top: 10px;
               left: 50px;
               border-color:green;
               border-width:2px;
+              background-color:blue;
           }
-          section#b {
+          #b {
               position: absolute;
               top: 30px;
               left: 80px;
               border-color:green;
               border-width:2px;
+              background-color:blue;
           }
-          section#c {
+          #c {
               position: absolute;
               top: 60px;
               left: 110px;
               border-color:green;
               border-width:2px;
+              background-color:blue;
           }
       </style>
    </head>
