--- a/Floating Text.html
+++ b/Floating Text.html
@@ -19,6 +19,8 @@
               border-color:green;
               border-width:2px;
               background-color:blue;
+              width:100px;
+              height:100Px;
           }
           #b {
               position: absolute;
@@ -26,7 +28,9 @@
               left: 80px;
               border-color:green;
               border-width:2px;
-              background-color:blue;
+              background-color:purple;
+              width:100px;
+              height:100Px;
           }
           #c {
               position: absolute;
@@ -34,7 +38,9 @@
               left: 110px;
               border-color:green;
               border-width:2px;
-              background-color:blue;
+              background-color:red;
+              width:100px;
+              height:100Px;
           }
       </style>
    </head>
