--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body {
     <h1 class="limetext">My Homework Assignments</h1>
         <ul>
           <li><a href="http://wriglu01.github.io/DailySchedule.html">Daily Schedule</a></li>
+          <li><a href="http://wriglu01.github.io/Floating%20Text.html">Positioning Assignment 3/2</a></li>
         </ul>
     
     <h2><i>Business Management Major</i></h2>
