--- a/Farenheit Calculator.html
+++ b/Farenheit Calculator.html
@@ -7,7 +7,7 @@
 body {background-color:#555555;
 }
 </style>
-<title>Celcius-Fahrenheit</title>
+<title>Celcius-Fahrenheit Converter</title>
 </head>
 
 <body>
