--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body {
         <ul>
           <li><a href="http://wriglu01.github.io/DailySchedule.html">Daily Schedule</a></li>
           <li><a href="http://wriglu01.github.io/Floating%20Text.html">Positioning Assignment 3/2</a></li>
+          <li><a href="http://wriglu01.github.io/Farenheit%20Calculator.html">Fahrenheit Converter</a></li>
         </ul>
     
     <h2><i>Business Management Major</i></h2>
