--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body {
           <li><a href="http://wriglu01.github.io/DailySchedule.html">Daily Schedule</a></li>
           <li><a href="http://wriglu01.github.io/Floating%20Text.html">Positioning Assignment 3/2</a></li>
           <li><a href="http://wriglu01.github.io/Farenheit%20Calculator.html">Fahrenheit Converter</a></li>
+          <li><a href="http://wriglu01.github.io/BMI%20Calculator.html">BMI Calculator</a></li>
         </ul>
     
     <h2><i>Business Management Major</i></h2>
