--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body {
           <li><a href="http://wriglu01.github.io/Farenheit%20Calculator.html">Fahrenheit Converter</a></li>
           <li><a href="http://wriglu01.github.io/BMI%20Calculator.html">BMI Calculator</a></li>
           <li><a href="http://wriglu01.github.io/Calendar.html">Calendar</a></li>
+          <li><a href="http://wriglu01.github.io/todolist.html">To Do List</a></li>
         </ul>
     
     <h2><i>Business Management Major</i></h2>
