--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
           <li><a href="http://wriglu01.github.io/Floating%20Text.html">Positioning Assignment 3/2</a></li>
           <li><a href="http://wriglu01.github.io/Farenheit%20Calculator.html">Fahrenheit Converter</a></li>
           <li><a href="http://wriglu01.github.io/BMI%20Calculator.html">BMI Calculator</a></li>
-          <li><a href="http://wriglu01.github.io/Calendar.html">Calendar</a></li>
+          <li><a href="http://wriglu01.github.io/Calendar.html">Address Book</a></li>
           <li><a href="http://wriglu01.github.io/todolist.html">To Do List</a></li>
         </ul>
     
