--- a/BMI Calculator.html
+++ b/BMI Calculator.html
@@ -3,7 +3,9 @@
 <head>
 <title>BMI Calculator</title>
 <style>
+body {
     background-image: url("http://www.berkeleywellness.com/sites/default/files/field/image/bathroom-scale-MF_998_380.jpg");
+}
 </style>
 
 </head>
