--- a/BMI Calculator.html
+++ b/BMI Calculator.html
@@ -4,7 +4,7 @@
 <title>BMI Calculator</title>
 <style>
 body {
-    background-image: url("http://www.berkeleywellness.com/sites/default/files/field/image/bathroom-scale-MF_998_380.jpg");
+    background-image: url("http://www.freebmicalculator.net/bmi-chart-metric.jpg");
 }
 </style>
 
