--- a/BMI Calculator.html
+++ b/BMI Calculator.html
@@ -5,6 +5,8 @@
 <style>
 body {
     background-image: url("http://www.freebmicalculator.net/bmi-chart-metric.jpg");
+    background-width: 100%;
+    background-height:100%;
 }
 </style>
 
