--- a/Calendar.html
+++ b/Calendar.html
@@ -13,7 +13,11 @@
         border-width: 3px;
         border-color: black;
       }
-      background = green
+      body
+      {
+      background = green;
+      font = fantasy;
+      }
       
     </style>
   </head>
