--- a/Calendar.html
+++ b/Calendar.html
@@ -13,10 +13,7 @@
         border-width: 3px;
         border-color: black;
       }
-      body
-      {
-      background = green;
-      font = fantasy;
+      body {background-image: url("http://icons.iconarchive.com/icons/trysoda/soda-red/512/Address-book-icon.png");background-size:100% 100%;
       }
       
     </style>
